--- a/templates/pages/dashboard.html
+++ b/templates/pages/dashboard.html
@@ -3,77 +3,7 @@
 {% block title %}Shidou{% endblock %}
 
 {% block head %}
-<script>
-    function isValidUrl(input) {
-        input = input.trim();
-        input = input.includes('://') ? input : 'http://' + input;
-        var re_weburl = new RegExp(
-          "^" +
-            // protocol identifier (optional)
-            // short syntax // still required
-            "(?:(?:(?:https?|ftp):)?\\/\\/)" +
-            // user:pass BasicAuth (optional)
-            "(?:\\S+(?::\\S*)?@)?" +
-            "(?:" +
-              // IP address exclusion
-              // private & local networks
-              "(?!(?:10|127)(?:\\.\\d{1,3}){3})" +
-              "(?!(?:169\\.254|192\\.168)(?:\\.\\d{1,3}){2})" +
-              "(?!172\\.(?:1[6-9]|2\\d|3[0-1])(?:\\.\\d{1,3}){2})" +
-              // IP address dotted notation octets
-              // excludes loopback network 0.0.0.0
-              // excludes reserved space >= 224.0.0.0
-              // excludes network & broadcast addresses
-              // (first & last IP address of each class)
-              "(?:[1-9]\\d?|1\\d\\d|2[01]\\d|22[0-3])" +
-              "(?:\\.(?:1?\\d{1,2}|2[0-4]\\d|25[0-5])){2}" +
-              "(?:\\.(?:[1-9]\\d?|1\\d\\d|2[0-4]\\d|25[0-4]))" +
-            "|" +
-              // host & domain names, may end with dot
-              // can be replaced by a shortest alternative
-              // (?![-_])(?:[-\\w\\u00a1-\\uffff]{0,63}[^-_]\\.)+
-              "(?:" +
-                "(?:" +
-                  "[a-z0-9\\u00a1-\\uffff]" +
-                  "[a-z0-9\\u00a1-\\uffff_-]{0,62}" +
-                ")?" +
-                "[a-z0-9\\u00a1-\\uffff]\\." +
-              ")+" +
-              // TLD identifier name, may end with dot
-              "(?:[a-z\\u00a1-\\uffff]{2,}\\.?)" +
-            ")" +
-            // port number (optional)
-            "(?::\\d{2,5})?" +
-            // resource path (optional)
-            "(?:[/?#]\\S*)?" +
-          "$", "i"
-        );
-        return !!re_weburl.test(input);
-    }
-
-    function validateURLInput() {
-        const isValid = isValidUrl(this.value);
-        if (isValid === false) {
-            this.setCustomValidity('Please provide a valid URL');
-            htmx.find('#createRedirectForm').reportValidity();
-        } else {
-            this.setCustomValidity('');
-        }
-    }
-
-    function copyRedirectKeyToClipboard(element, event) {
-        if (event.detail.pathInfo.requestPath !== '/api/redirect') {
-            return;
-        }
-
-        try {
-            const text = element.querySelector("#redirectKeyInput").value;
-            navigator.clipboard.writeText(text);
-        } catch (err) {
-            console.error('Failed to copy: ', err);
-        }
-    }
-</script>
+<script src="/assets/js/dashboard.js"></script>
 {% endblock %}
 
 {% block header %}
@@ -106,7 +36,8 @@
     <div class="flex-1 flex items-center justify-center p-6">
         <form id="createRedirectForm"
               hx-post="/api/redirect"
-        	  hx-on::after-request="copyRedirectKeyToClipboard(this, event)"
+              hx-on::after-request="copyRedirectKeyToClipboard(this, event)"
+              hx-swap="none"
               hx-ext='json-enc'
               class="w-full max-w-4xl px-2 py-2 text-center items-center space-y-2 text-black bg-slate-200 rounded">
             <div class="flex w-full">
@@ -143,11 +74,13 @@
                     >
                     </div>
                 </div>
-                <button hx-target="#redirectUrlWrapper"
-                        hx-trigger="load, click"
-                        hx-swap="innerHTML"
-                        hx-get="/ui/redirect_url_input"
-                        class="px-2">Randomize</button>
+                <button
+                	id="randomizeButton"
+                    hx-target="#redirectUrlWrapper"
+                    hx-trigger="load, click"
+                    hx-swap="innerHTML"
+                    hx-get="/ui/redirect_url_input"
+                    class="px-2">Randomize</button>
             </div>
         </form>
     </div>
